--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="icon" id="icon2"><img src="phone-solid.svg"> <p>CallMe</p></div>
         <div class="icon" id="icon3"><img src="codepen-brands.svg"> <p>MyCoding</p></div>
         <div class="icon" id="icon4"><img src="comment-dots-solid.svg"> <p>Chat</p></div>
-        <div class="modal-content">
+        <div class="modal-uhr">
             <span class="close">&times;</span>
             <p>Some text in the Modal..</p>
         </div>
