--- a/index.html
+++ b/index.html
@@ -18,13 +18,29 @@
             <span class="close">&times;</span>
             <p>Some text in the Modal..</p>
         </div>
+        <div class="modal-ubermich">
+            <div class="oberebar">
+                <p class="window-left">Über mich</p>
+                <p class="window-right">&times</p>
+            </div>
+            <div class="ubermain">
+                
+                <h1>Mein Name ist Brian Hameister</h1>
+                <p>ich bin 51 Jahre alt und geboren und aufgewachsen in Flensburg.<p>
+                <p>Seit nunmehr fast 14 Jahren bin ich der Vater der besten Tochter der Welt.<p>
+                <p>In meiner Freizeit beschäftige ich mich sehr gerne mit allem, was mit Computern zu tun hat.<p>
+                <p>Ich fahre Motorrad und, wenn es notwendig ist, repariere ich diese auch.<p>
+                <p>Wenn ich dann noch Zeit habe, widme ich mich der chinesischen Kultur. Heisst ich koche gerne aber ich versuche mich auch an  der Sprache.<p>
+
+            </div>
+        </div>
     </main>
     <task>
         <div class="taskleiste">
             <div class="logo"></div>
             <div class="tasks">
                 <ul>
-                    <li class="container">Über mich</li>
+                    <li class="container uber_mich">Über mich</li>
                     <li class="container">Arbeiten</li>
                     <li class="container">Software</li>
                     <li class="container">Impressum</li>
