--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
 
             </div>
         </div>
+        <div class="modal-arbeiten">
+            <div class="oberebar">
+                <p class="window-left">Arbeiten</p>
+                <p class="window-right1">&times</p>
+            </div>
+         <div class="arbeit-main">
+            <div class="container1"></div>
+            <div class="container2"></div>
+            <div class="container3"></div>
+            <div class="container4"></div>
+            <div class="container5"></div>
+            <div class="container6"></div>
+            
+         </div>
+        </div>
     </main>
     <task>
         <div class="taskleiste">
@@ -41,7 +56,7 @@
             <div class="tasks">
                 <ul>
                     <li class="container uber_mich">Über mich</li>
-                    <li class="container">Arbeiten</li>
+                    <li class="container arbeit">Arbeiten</li>
                     <li class="container">Software</li>
                     <li class="container">Impressum</li>
                     <li class="container clock">Uhrzeit</li>
